--- a/template/python3-http/Dockerfile
+++ b/template/python3-http/Dockerfile
@@ -23,7 +23,10 @@ WORKDIR /home/app/
 
 COPY --chown=app:app index.py           .
 COPY --chown=app:app requirements.txt   .
+
 USER root
+ENV PIP_ROOT_USER_ACTION=ignore
+RUN pip install --upgrade pip >/dev/null 2>&1
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Build the function directory and install any user-specified components
