--- a/template/python3-flask/Dockerfile
+++ b/template/python3-flask/Dockerfile
@@ -27,15 +27,8 @@ COPY --chown=app:app requirements.txt   .
 USER root
 ENV PIP_ROOT_USER_ACTION=ignore
 RUN pip install --upgrade pip >/dev/null 2>&1
-RUN apk add --no-cache --virtual .build-deps \
-    gcc \
-    python3-dev \
-    musl-dev \
-    postgresql-dev \
-    && pip install --no-cache-dir psycopg2 \
-    && apk del --no-cache .build-deps
 RUN --mount=type=secret,id=pipconf,mode=0666,dst=/home/app/.config/pip/pip.conf \
-	pip install --no-cache-dir -r requirements.txt
+        pip install --no-cache-dir -r requirements.txt
 
 # Build the function directory and install any user-specified components
 USER app
@@ -45,7 +38,13 @@ RUN touch ./function/__init__.py
 WORKDIR /home/app/function/
 COPY --chown=app:app function/requirements.txt	.
 RUN --mount=type=secret,id=pipconf,mode=0666,dst=/home/app/.config/pip/pip.conf \
-        pip install --no-cache-dir --user -r requirements.txt
+    apk add --no-cache --virtual .build-deps \
+    gcc \
+    python3-dev \
+    musl-dev \
+    postgresql-dev \
+    && pip install --no-cache-dir --user -r requirements.txt \
+    && apk del --no-cache .build-deps
 
 # install function code
 USER root
