--- a/template/python3-flask/Dockerfile
+++ b/template/python3-flask/Dockerfile
@@ -27,7 +27,7 @@ COPY --chown=app:app requirements.txt   .
 USER root
 ENV PIP_ROOT_USER_ACTION=ignore
 RUN pip install --upgrade pip >/dev/null 2>&1
-RUN --mount=type=secret,id=pipconf,mode=0666,dst=/home/app/.config/pip/pip.conf \
+RUN --mount=type=secret,id=pipconf,mode=0666,dst=/root/.config/pip/pip.conf \
         pip install --no-cache-dir -r requirements.txt
 
 # Build the function directory and install any user-specified components
