--- a/template/python3-flask/Dockerfile
+++ b/template/python3-flask/Dockerfile
@@ -35,13 +35,13 @@ RUN mkdir -p function
 RUN touch ./function/__init__.py
 WORKDIR /home/app/function/
 COPY --chown=app:app function/requirements.txt	.
+RUN apk --no-cache add postgresql-dev
 RUN --mount=type=secret,id=pipconf,mode=0666,dst=/root/.config/pip/pip.conf \
     apk add --no-cache --virtual .build-deps \
     gcc \
     python3-dev \
     linux-headers \
     musl-dev \
-    postgresql-dev \
     && pip install --no-cache-dir -r requirements.txt \
     && apk del --no-cache .build-deps
 
