--- a/template/python3-flask/template.yml
+++ b/template/python3-flask/template.yml
@@ -16,6 +16,7 @@ build_options:
     packages: 
       - build-util
       - gcc
+      - git
       - linux-headers
       - musl-dev
       - postgresql-dev
