--- a/template/python3-http/Dockerfile
+++ b/template/python3-http/Dockerfile
@@ -1,7 +1,7 @@
 # syntax=docker/dockerfile:1.3
 
 FROM --platform=${TARGETPLATFORM:-linux/amd64} ghcr.io/openfaas/of-watchdog:0.9.10 as watchdog
-FROM --platform=${TARGETPLATFORM:-linux/amd64} python:3-alpine as build
+FROM --platform=${TARGETPLATFORM:-linux/amd64} python:3.11-alpine as build
 
 COPY --from=watchdog /fwatchdog /usr/bin/fwatchdog
 RUN chmod +x /usr/bin/fwatchdog
@@ -9,7 +9,7 @@ RUN chmod +x /usr/bin/fwatchdog
 ARG ADDITIONAL_PACKAGE
 # Alternatively use ADD https:// (which will not be cached by Docker builder)
 
-RUN apk --no-cache add ${ADDITIONAL_PACKAGE}
+RUN apk --no-cache add openssl-dev postgresql-dev ${ADDITIONAL_PACKAGE}
 
 # Add non root user
 RUN addgroup -S app && adduser app -S -G app
@@ -25,22 +25,26 @@ COPY --chown=app:app index.py           .
 COPY --chown=app:app requirements.txt   .
 
 USER root
-ENV PIP_ROOT_USER_ACTION=ignore
+ARG PIP_ROOT_USER_ACTION=ignore
 RUN pip install --upgrade pip >/dev/null 2>&1
-RUN pip install --no-cache-dir -r requirements.txt
+RUN --mount=type=secret,id=pipconf,mode=0666,dst=/root/.config/pip/pip.conf \
+        pip install --no-cache-dir -r requirements.txt
 
 # Build the function directory and install any user-specified components
-USER app
-
 RUN mkdir -p function
 RUN touch ./function/__init__.py
 WORKDIR /home/app/function/
 COPY --chown=app:app function/requirements.txt	.
-RUN --mount=type=secret,id=pipconf,mode=0666,dst=/home/app/.config/pip/pip.conf \
-        pip install --no-cache-dir --user -r requirements.txt
+RUN --mount=type=secret,id=pipconf,mode=0666,dst=/root/.config/pip/pip.conf \
+    apk add --no-cache --virtual .build-deps \
+    gcc \
+    python3-dev \
+    linux-headers \
+    musl-dev \
+    && pip install --no-cache-dir -r requirements.txt \
+    && apk del --no-cache .build-deps
 
-# install function code
-USER root
+# Install function code
 COPY --chown=app:app function/   .
 
 FROM build as test
@@ -51,7 +55,8 @@ RUN [ "$TEST_ENABLED" = "false" ] && echo "skipping tests" || eval "$TEST_COMMAN
 FROM build as ship
 WORKDIR /home/app/
 
-# configure WSGI server and healthcheck
+# Configure WSGI server and healthcheck
+RUN chown -R app:app /home/app
 USER app
 
 ENV fprocess="python index.py"
