--- a/template/python3-http/template.yml
+++ b/template/python3-http/template.yml
@@ -14,6 +14,7 @@ build_options:
       - subversion
   - name: psycopg2
     packages: 
+      - build-util
       - gcc
       - git
       - linux-headers
