Update python3-http-debian.  Remove others to reduce confusion.

--- a/template/python3-http-debian/Dockerfile
+++ b/template/python3-http-debian/Dockerfile
@@ -1,10 +1,12 @@
 FROM --platform=${TARGETPLATFORM:-linux/amd64} ghcr.io/openfaas/of-watchdog:0.9.10 as watchdog
-FROM --platform=${TARGETPLATFORM:-linux/amd64} python:3.7-slim-buster as build
+FROM --platform=${TARGETPLATFORM:-linux/amd64} python:3.11-slim-bullseye as build
+MAINTAINER Klar Devops <devops@klar.mx>
 
 COPY --from=watchdog /fwatchdog /usr/bin/fwatchdog
 RUN chmod +x /usr/bin/fwatchdog
 
-ARG ADDITIONAL_PACKAGE
+ARG NONROOT_USER=app
+ARG ADDITIONAL_PACKAG=""
 # Alternatively use ADD https:// (which will not be cached by Docker builder)
 
 RUN apt-get -qy update \
@@ -24,29 +26,42 @@ WORKDIR /home/app/
 COPY --chown=app:app index.py           .
 COPY --chown=app:app requirements.txt   .
 USER root
-RUN pip install --no-cache-dir -r requirements.txt
-USER app
+ARG PIP_ROOT_USER_ACTION=ignore
+RUN --mount=type=secret,id=pipconf,mode=0666,dst=/home/app/.config/pip/pip.conf \
+        pip install --upgrade pip && \
+        pip install --no-warn-script-location virtualenv poetry pipenv
+RUN --mount=type=secret,id=pipconf,mode=0666,dst=/root/.config/pip/pip.conf \
+        pip install --no-cache-dir -r requirements.txt
 
+# Build the function directory and install any user-specified components
+USER app
 RUN mkdir -p function
 RUN touch ./function/__init__.py
 WORKDIR /home/app/function/
 COPY --chown=app:app function/requirements.txt	.
-RUN pip install --no-cache-dir --user -r requirements.txt
+RUN --mount=type=secret,id=pipconf,mode=0666,dst=/root/.config/pip/pip.conf \
+        pip install --no-cache-dir --user -r requirements.txt
 
+# Install function code
 USER root
 COPY --chown=app:app function/   .
+RUN chown -R app:app /home/app
+
+USER app
 
 FROM build as test
-
 ARG TEST_COMMAND=tox
 ARG TEST_ENABLED=true
 RUN [ "$TEST_ENABLED" = "false" ] && echo "skipping tests" || eval "$TEST_COMMAND"
 
-
 FROM build as ship
 WORKDIR /home/app/
 
-USER app
+# Configure WSGI server and healthcheck
+ENV LANG=C.UTF-8
+ENV LC_ALL=C.UTF-8
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONFAULTHANDLER=1
 
 # Set up of-watchdog for HTTP mode
 ENV fprocess="python index.py"
