Don't copy all things in the function directory.

--- a/template/python3-http-debian/Dockerfile
+++ b/template/python3-http-debian/Dockerfile
@@ -45,7 +45,7 @@ RUN --mount=type=secret,id=pipconf,mode=0666,dst=/home/app/.config/pip/pip.conf 
 
 # Install function code
 USER root
-COPY --chown=app:app function/   .
+#COPY --chown=app:app function/   .
 RUN chown -R app:app /home/app
 
 USER app
