--- a/template/python3-flask-debian/template.yml
+++ b/template/python3-flask-debian/template.yml
@@ -1,2 +1,8 @@
 language: python3-http-flask
 fprocess: python index.py
+build_options:
+  - name: libpq
+    packages: 
+      - libpq-dev
+      - gcc
+      - python3-dev
