--- a/template/python3-debian/Dockerfile
+++ b/template/python3-debian/Dockerfile
@@ -47,7 +47,7 @@ RUN --mount=type=secret,id=pipconf,mode=0666,dst=/home/app/.config/pip/pip.conf 
 
 # Install function code
 USER root
-COPY --chown=app:app function/   .
+COPY --chown=app:app ./function/.   /home/app/function/
 RUN chown -R app:app /home/app
 
 USER app
